--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,9 +2,8 @@
   <!-- Logo -->
   <a href="/admin" class="logo">
     <!-- mini logo for sidebar mini 50x50 pixels -->
-    <span class="logo-mini"><b>P</b>Q</span>
     <!-- logo for regular state and mobile devices -->
-    <span class="logo-lg">PQ Billiards</span>
+    <span class="logo-lg">DORMITORY</span>
   </a>
   <!-- Header Navbar: style can be found in header.less -->
   <nav class="navbar navbar-static-top">
@@ -105,7 +104,7 @@
         <li class="dropdown user user-menu">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <img th:src="@{/assets/images/user2-160x160.jpg}" class="user-image" alt="User Image">
-            <span class="hidden-xs"><span sec:authentication ="name"></span></span>
+            <span class="hidden-xs"><span class="usernameSpan">Guest</span></span>
           </a>
           <ul class="dropdown-menu">
             <!-- User image -->
@@ -113,24 +112,10 @@
               <img th:src="@{/assets/images/user2-160x160.jpg}" class="img-circle" alt="User Image">
 
               <p>
-                <span class="hidden-xs"><span sec:authentication ="name"></span></span>
+                <span class="hidden-xs"><span class="usernameSpan">Guest</span></span>
               </p>
             </li>
-            <!-- Menu Body -->
-            <li class="user-body">
-              <div class="row">
-                <div class="col-xs-4 text-center">
-                  <a href="#">Followers</a>
-                </div>
-                <div class="col-xs-4 text-center">
-                  <a href="#">Sales</a>
-                </div>
-                <div class="col-xs-4 text-center">
-                  <a href="#">Friends</a>
-                </div>
-              </div>
-              <!-- /.row -->
-            </li>
+
             <!-- Menu Footer-->
             <li class="user-footer">
               <div class="pull-left">
