--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -7,8 +7,7 @@
         <img th:src="@{/assets/images/user2-160x160.jpg}" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
-        <span class="hidden-xs"><span sec:authentication ="name"></span></span>
-        <br><a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+        <span class="hidden-xs"><span class="usernameSpan">Guest</span></span>
       </div>
     </div>
     <!-- search form -->
@@ -58,5 +57,4 @@
 
     </ul>
   </section>
-  <!-- /.sidebar -->
 </aside>
