--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -4,9 +4,10 @@
     <!-- Sidebar user panel -->
     <div class="user-panel">
       <div class="pull-left image">
-        <img th:src="@{/assets/images/user2-160x160.jpg}" class="img-circle" alt="User Image">
+        <img th:src="@{/assets/images/userlogo.jpg}" class="img-circle" alt="User Image">
       </div>
       <div class="pull-left info">
+        <br>
         <span class="hidden-xs"><span class="usernameSpan">Guest</span></span>
       </div>
     </div>
@@ -27,30 +28,45 @@
 
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-th"></i> <span>Quản lý Sản Phẩm</span>
+          <i class="fa fa-th"></i> <span>Biểu Mẫu</span>
           <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
         </a>
         <ul class="treeview-menu">
-          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i> Sản Phẩm</a></li>
-          <li><a th:href="@{/admin/productDetail}"><i class="fa fa-circle-o"></i>Chi Tiết Sản Phẩm</a></li>
-          <li><a th:href="@{/admin/productLine}"><i class="fa fa-circle-o"></i>Dòng Sản Phẩm</a></li>
-          <li><a th:href="@{/admin/Supplier}"><i class="fa fa-circle-o"></i>Nhà Cung Cấp</a></li>
+          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Đăng ký nội trú</a></li>
+          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Hóa đơn</a></li>
+          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Phòng</a></li>
+          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Liên hệ</a></li>
+          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Quy định</a></li>
+
+
         </ul>
 
       </li>
       <li class="treeview">
         <a href="#">
-          <i class="fa fa-th"></i> <span>Quản lý Tài Khoản</span>
+          <i class="fa fa-th"></i> <span>Thanh Toán</span>
           <span class="pull-right-container">
               <i class="fa fa-angle-left pull-right"></i>
             </span>
         </a>
         <ul class="treeview-menu">
-          <li><a th:href="@{/admin/user}"><i class="fa fa-circle-o"></i> Tài Khoản Nhân Viên</a></li>
-          <li><a ><i class="fa fa-circle-o"></i>Tài Khoản Khách Hàng</a></li>
+          <li><a th:href="@{/admin/user}"><i class="fa fa-circle-o"></i>Thanh toán tiền phòng</a></li>
+          <li><a ><i class="fa fa-circle-o"></i>Thanh toán tiền điện</a></li>
+          <li><a ><i class="fa fa-circle-o"></i>Thanh toán tiền nước</a></li>
+          <li><a ><i class="fa fa-circle-o"></i>Thanh toán chi phí khác</a></li>
+
         </ul>
+
+      </li>
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-th"></i> <span>Hướng Dẫn</span>
+          <span class="pull-right-container">
+              <i class="fa fa-angle-left pull-right"></i>
+            </span>
+        </a>
 
       </li>
 
