--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -8,3 +8,78 @@
 $END$
 </body>
 </html>
+=======
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Mật khẩu mới</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(to right, #f88f50, #f7e75c);
+      font-family: Arial, sans-serif;
+    }
+    .form-control {
+      border: none;
+      border-bottom: 1px solid #555;
+      border-radius: 0;
+      margin-bottom: 20px;
+      background: transparent;
+    }
+
+    .form-control:focus {
+      box-shadow: none;
+      border-bottom: 2px solid #007bff;
+      background: transparent;
+    }
+    .btn-custom {
+      width: 100%;
+      height: 45px;
+      font-size: 18px;
+      border-radius: 8px;
+    }
+    .logo-img {
+      max-width: 100%;
+      height: auto;
+    }
+  </style>
+</head>
+<body>
+
+<div class="container container-box">
+  <div class="row align-items-center">
+    <div class="col-md-6 text-center mb-6 mb-md-0" >
+      <a href="index.html">
+        <img th:src="@{/fe/images/icons/dormitory.png}" alt="Dormitory" class="img-fluid w-75" style="width: 100%; height: auto;">
+      </a>
+    </div>
+    <!-- Cột form -->
+    <div class="col-md-6 px-5">
+      <!-- Tiêu đề căn giữa -->
+      <h3 class="text-primary fw-bold mb-4 text-center">Mật khẩu mới</h3>
+
+      <form>
+        <input type="email" class="form-control" placeholder="Nhập Email" required>
+        <input type="password" class="form-control" placeholder="Mật khẩu mới" required>
+        <input type="password" class="form-control" placeholder="Xác nhận mật khẩu" required>
+        <button type="submit" class="btn btn-primary btn-custom mt-3">Xác nhận</button>
+      </form>
+
+      <!-- Dòng đăng nhập căn giữa -->
+      <p class="mt-3 text-center">
+        Bạn đã có tài khoản? <a href="login.html">ĐĂNG NHẬP</a>
+      </p>
+    </div>
+  </div>
+</div>
+
+<!-- Bootstrap JS -->
+<script></script>
+</body>
+</html>
