--- a/src/main/resources/templates/forgotPassword.html
+++ b/src/main/resources/templates/forgotPassword.html
@@ -1,14 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
-=======
+
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
@@ -55,7 +45,7 @@ $END$
 <div class="container container-box">
   <div class="row align-items-center">
     <div class="col-md-6 text-center mb-6 mb-md-0" >
-      <a href="index.html">
+      <a th:href="@{/}">
         <img th:src="@{/fe/images/icons/dormitory.png}" alt="Dormitory" class="img-fluid w-75" style="width: 100%; height: auto;">
       </a>
     </div>
@@ -73,7 +63,7 @@ $END$
 
       <!-- Dòng đăng nhập căn giữa -->
       <p class="mt-3 text-center">
-        Bạn đã có tài khoản? <a href="login.html">ĐĂNG NHẬP</a>
+        Bạn đã có tài khoản? <a th:href="@{/login}">ĐĂNG NHẬP</a>
       </p>
     </div>
   </div>
