--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -76,7 +76,7 @@
                 <button type="submit" class="btn btn-login mt-4">Đăng nhập</button>
             </form>
             <div class="login-links mt-4">
-                <a href="forgotPassword.html" class="text-decoration-none text-primary fw-semibold">Quên mật khẩu?</a><br>
+                <a th:href="@{/forgot-password}" class="text-decoration-none text-primary fw-semibold">Quên mật khẩu?</a><br>
                 <span class="mt-4">Chưa có tài khoản? <a th:href="@{/register}" class="text-decoration-none text-primary fw-semibold">Đăng ký</a></span>
             </div>
 
