--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -45,6 +45,25 @@
           background-color: #218838;
           color: white;
         }
+        .form-group {
+            position: relative;
+            margin-bottom: 2.5rem;
+        }
+        .invalid-feedback {
+            display: block;
+            position: absolute;
+            bottom: -1.6rem; /* nằm dưới input */
+            left: 0; /* căn thẳng với chữ trong input */
+            padding-left: 0.75rem; /* khớp khoảng padding bên trong ô nhập */
+            font-size: 1rem; /* bằng chữ trong ô nhập */
+            font-family: inherit;
+            color: #dc3545;
+            text-align: left;
+        }
+
+        .form-control.is-invalid {
+            border-color: #dc3545;
+        }
 
     </style>
 </head>
@@ -63,23 +82,27 @@
             <div class="form-box text-center">
                 <h2 class="text-success mb-5 fw-bold">Tạo Tài Khoản</h2>
                 <form id="RegisterForm" novalidate>
-                    <div class="mb-4">
+                    <div class="form-group">
                         <input type="text" class="form-control" id="fullName" placeholder="Họ và tên" required>
+                        <div class="invalid-feedback mt-1">Vui lòng nhập họ và tên</div>
                     </div>
-                    <div class="mb-4">
+                    <div class="form-group">
                         <input type="text" class="form-control" id="username" placeholder="Tên đăng nhập" required>
+                        <div class="invalid-feedback mt-1">Vui lòng nhập tên đăng nhập</div>
                     </div>
-                    <div class="mb-4">
+                    <div class="form-group ">
                         <input type="email" class="form-control" id="email" placeholder="Email" required>
+                        <div class="invalid-feedback mt-1">Vui lòng nhập email</div>
                     </div>
-                    <div class="mb-4">
+                    <div class="form-group">
                         <input type="password" class="form-control" id="password" placeholder="Mật khẩu" required>
+                        <div class="invalid-feedback mt-1">Vui lòng nhập mật khẩu</div>
                     </div>
 
-                    <div class="form-check mb-4 text-start">
+                    <div class="form-check mb-3 text-start">
                         <input class="form-check-input" type="checkbox" id="terms" required>
                         <label class="form-check-label" for="terms">
-                            Đồng ý với điều kiện sử dụng thông tin
+                            Đồng ý với điều khoản sử dụng thông tin
                         </label>
                     </div>
                     <div class="d-grid mb-3">
