reset password layout and feature

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -50,20 +50,18 @@
             margin-bottom: 2.5rem;
         }
         .invalid-feedback {
-            display: block;
+            display: none;
             position: absolute;
-            bottom: -1.6rem; /* nằm dưới input */
-            left: 0; /* căn thẳng với chữ trong input */
-            padding-left: 0.75rem; /* khớp khoảng padding bên trong ô nhập */
-            font-size: 1rem; /* bằng chữ trong ô nhập */
+            bottom: -1.6rem;
+            left: 0;
+            padding-left: 0.75rem;
+            font-size: 1rem;
             font-family: inherit;
             color: #dc3545;
             text-align: left;
         }
 
-        .form-control.is-invalid {
-            border-color: #dc3545;
-        }
+
 
     </style>
 </head>
