--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -59,7 +59,7 @@
     <div class="row align-items-center">
         <!-- Cột ảnh -->
         <div class="col-md-6 text-center mb-6 mb-md-0" >
-            <a href="index.html">
+            <a th:href="@{/}">
                 <img th:src="@{/fe/images/icons/dormitory.png}" alt="Dormitory" class="img-fluid w-75" style="width: 100%; height: auto;">
 
             </a>
