--- a/src/main/resources/templates/fragments/sidebar.html
+++ b/src/main/resources/templates/fragments/sidebar.html
@@ -36,7 +36,7 @@
         <ul class="treeview-menu">
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Đăng ký nội trú</a></li>
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Hóa đơn</a></li>
-          <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Phòng</a></li>
+          <li><a th:href="@{/rooms}"><i class="fa fa-circle-o"></i>Phòng</a></li>
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Liên hệ</a></li>
           <li><a th:href="@{/admin/product}"><i class="fa fa-circle-o"></i>Quy định</a></li>
 
