--- a/src/main/resources/templates/student/index.html
+++ b/src/main/resources/templates/student/index.html
@@ -25,6 +25,7 @@
 
 <!-- Site wrapper -->
 <div class="wrapper">
+    <div th:replace="fragments/header::header"></div>
 
     <!-- =============================================== -->
 
