--- a/frontend_student/src/main/resources/templates/register.html
+++ b/frontend_student/src/main/resources/templates/register.html
@@ -69,7 +69,7 @@
 <div class="container container-box">
     <div class="row align-items-center">
         <div class="col-md-6 text-center mb-6 mb-md-0" >
-            <a href="student/index.html">
+            <a th:href="@{/}" >
                 <img th:src="@{/assets/images/dormitory.png}" alt="Dormitory" class="img-fluid w-75" style="width: 100%; height: auto;">
             </a>
         </div>
